// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostPreHeader should match snapshot when flagged and not pinned 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "row",
        "height": 15,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
      },
      false,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginRight": 10,
        "width": 35,
      }
    }
  >
    <CompassIcon
      name="bookmark-outline"
      size={14}
      style={
        Object {
          "color": "#2389d7",
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Array [],
      ]
    }
  >
    <FormattedText
      defaultMessage="Saved"
      id="mobile.post_pre_header.flagged"
      style={
        Object {
          "color": "#2389d7",
          "fontSize": 13,
          "lineHeight": 15,
        }
      }
    />
  </View>
</View>
`;

exports[`PostPreHeader should match snapshot when flagged post is set but skipFlaggedHeader is true 1`] = `null`;

exports[`PostPreHeader should match snapshot when not flagged or pinned post 1`] = `null`;

exports[`PostPreHeader should match snapshot when pinned and flagged 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "row",
        "height": 15,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
      },
      false,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginRight": 10,
        "width": 35,
      }
    }
  >
    <CompassIcon
      name="pin-outline"
      size={14}
      style={
        Object {
          "color": "#2389d7",
        }
      }
    />
    <View
      style={
        Object {
          "marginRight": 5,
        }
      }
    />
    <CompassIcon
      name="bookmark-outline"
      size={14}
      style={
        Object {
          "color": "#2389d7",
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Array [],
      ]
    }
  >
    <FormattedText
      defaultMessage="Pinned and Saved"
      id="mobile.post_pre_header.pinned_flagged"
      style={
        Object {
          "color": "#2389d7",
          "fontSize": 13,
          "lineHeight": 15,
        }
      }
    />
  </View>
</View>
`;

exports[`PostPreHeader should match snapshot when pinned and flagged but skipping both 1`] = `null`;

exports[`PostPreHeader should match snapshot when pinned and flagged but skipping flagged 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "row",
        "height": 15,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
      },
      false,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginRight": 10,
        "width": 35,
      }
    }
  >
    <CompassIcon
      name="pin-outline"
      size={14}
      style={
        Object {
          "color": "#2389d7",
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Array [],
      ]
    }
  >
    <FormattedText
      defaultMessage="Pinned"
      id="mobile.post_pre_header.pinned"
      style={
        Object {
          "color": "#2389d7",
          "fontSize": 13,
          "lineHeight": 15,
        }
      }
    />
  </View>
</View>
`;

exports[`PostPreHeader should match snapshot when pinned and flagged but skipping pinned 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "row",
        "height": 15,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
      },
      false,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginRight": 10,
        "width": 35,
      }
    }
  >
    <CompassIcon
      name="bookmark-outline"
      size={14}
      style={
        Object {
          "color": "#2389d7",
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Array [],
      ]
    }
  >
    <FormattedText
      defaultMessage="Saved"
      id="mobile.post_pre_header.flagged"
      style={
        Object {
          "color": "#2389d7",
          "fontSize": 13,
          "lineHeight": 15,
        }
      }
    />
  </View>
</View>
`;

exports[`PostPreHeader should match snapshot when pinned and not flagged 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "row",
        "height": 15,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
      },
      false,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginRight": 10,
        "width": 35,
      }
    }
  >
    <CompassIcon
      name="pin-outline"
      size={14}
      style={
        Object {
          "color": "#2389d7",
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Array [],
      ]
    }
  >
    <FormattedText
      defaultMessage="Pinned"
      id="mobile.post_pre_header.pinned"
      style={
        Object {
          "color": "#2389d7",
          "fontSize": 13,
          "lineHeight": 15,
        }
      }
    />
  </View>
</View>
`;

exports[`PostPreHeader should match snapshot when pinned post is set but skipPinnedHeader is true 1`] = `null`;
